Mon Apr 20 23:46:53 2015  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (rb_w32_wreadlink): follow the official format of
	  REPARSE_DATA_BUFFER structure.

Mon Apr 20 20:23:04 2015  NAKAMURA Usaku  <usa@ruby-lang.org>

	* common.mk ($(arch)-fake.rb): revert r50354 because bsdmake seems not
	  to handle such substitution.

	* tool/expand-config.rb: convert path separators here.

Mon Apr 20 16:52:20 2015  NAKAMURA Usaku  <usa@ruby-lang.org>

	* tool/fake.rb: don't fake libdir.  use libdirname instead.

Mon Apr 20 16:49:52 2015  NAKAMURA Usaku  <usa@ruby-lang.org>

	* lib/mkmf.rb (MakeMakefile#configuration): DESTDIR should never affect
	  top_srcdir and builddir.

Mon Apr 20 16:18:17 2015  NAKAMURA Usaku  <usa@ruby-lang.org>

	* common.mk ($(arch)-fake.rb): fix the path separator up for Windows.

Mon Apr 20 15:02:47 2015  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (rb_w32_wreadlink): fixed a bug that a junction misses
	  its drive letter.

Mon Apr 20 12:54:56 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* ext/openssl/*: use license instead of licence.
	  [fix GH-876][ci skip] Patch by @davydovanton
	* lib/net/https.rb: ditto.

Mon Apr 20 12:42:40 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* benchmark/bm_so_meteor_contest.rb: fix a typo.
	  [fix GH-876][ci skip] Patch by @davydovanton
	* tool/bisect.sh: ditto.
	* tool/update-deps: ditto.

Mon Apr 20 11:10:46 2015  Eric Wong  <e@80x24.org>

	* ext/socket/socket.c (sock_connect_nonblock): do not raise EISCONN
	  [ruby-core:68926] [Feature #11072]
	* test/socket/test_nonblock.rb: check non-EISCONN on 2nd connect

Sun Apr 19 12:19:17 2015  Chad Brewbaker  <crb002@gmail.com>

	* ext/{etc,openssl,tk}: Adding parens and comparisons around
	  assignments to get rid of Wparentheses warnings.  [Fix GH-875]

Sun Apr 19 10:42:54 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* hash.c (get_env_cstr): environment variables must be ASCII
	  compatible, as dummy encodings and wide char encodings are