@@ -50,17 +50,14 @@ class Addrinfo
       sock.ipv6only! if self.ipv6?
       sock.bind local_addrinfo if local_addrinfo
       if timeout
-        begin
-          sock.connect_nonblock(self)
-        rescue IO::WaitWritable
+        case sock.connect_nonblock(self, exception: false)
+        when 0 # success or EISCONN, other errors raise
+          break
+        when :wait_writable
           if !IO.select(nil, [sock], nil, timeout)
             raise Errno::ETIMEDOUT, 'user specified timeout'
           end
-          begin
-            sock.connect_nonblock(self) # check connection failure
-          rescue Errno::EISCONN
-          end
-        end
+        end while true
       else
         sock.connect(self)
       end
