@@ -1,3 +1,8 @@
+Tue Apr 21 05:31:00 2015  Eric Wong  <e@80x24.org>
+
+	* ext/socket/lib/socket.rb (connect_internal): avoid common exceptions
+	  from connect_nonblock. [ruby-core:68909]
+
 Mon Apr 20 23:46:53 2015  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* win32/win32.c (rb_w32_wreadlink): follow the official format of
